chore: update quartz configuration and add new features - Enhance .gitignore to exclude IDE folders and additional files - Refactor Dockerfile for improved build process - Introduce Makefile for local and Docker builds - Update quartz.config.ts with project details and localization - Modify footer links and add random page navigation feature - Implement custom styles for dashboard layout

--- a/quartz_core/.gitignore
+++ b/quartz_core/.gitignore
@@ -1,5 +1,8 @@
-.DS_Store
-.gitignore
+# IDE folders
+.idea/
+.vscode/
+.DS_Store/
+
 node_modules
 public
 prof
@@ -9,3 +12,8 @@ tsconfig.tsbuildinfo
 private/
 .replit
 replit.nix
+static_md
+
+
+output
+content
