--- a/quartz_core/Dockerfile
+++ b/quartz_core/Dockerfile
@@ -1,11 +1,12 @@
-FROM node:20-slim AS builder
+FROM node:20-slim AS base
 WORKDIR /usr/src/app
-COPY package.json .
-COPY package-lock.json* .
-RUN npm ci
-
-FROM node:20-slim
-WORKDIR /usr/src/app
-COPY --from=builder /usr/src/app/ /usr/src/app/
+COPY package*.json ./
+RUN npm install
 COPY . .
-CMD ["npx", "quartz", "build", "--serve"]
+
+FROM base AS builder
+WORKDIR /usr/src/app
+RUN npx quartz build
+
+FROM scratch AS export
+COPY --from=builder /usr/src/app/public /
